--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --secondary-color: #03dac6;
   --background-color: #0d1117;
   --text-color: #c9d1d9;
+  --text-color-hover: #ffffff;
   --sm-radius: 4px;
   --md-radius: 8px;
 }
