--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .home {
-  max-width: calc(100% - 3rem);
+  max-width: calc(100% - 2rem);
   margin: 0 auto;
 }
 
@@ -16,9 +16,9 @@ header {
 }
 
 h1 {
-  font-size: calc(1.5rem + 1vw);
+  font-size: clamp(1.875rem, 2rem, 4vw);
   text-align: center;
-  margin: calc(1rem + 1vw);
+  margin:0 .5rem ;
 }
 
 header a {
